chore: added sync route missing and their docs
